[project]
name = "quasar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.0.1",
    "astroquery>=0.4.10",
    "gradio>=5.29.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "photutils>=2.2.0",
    "scikit-learn>=1.6.1",
]
